--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     volumes:
-      - ${MYSQL_LOCAL_HOME}:/var/lib/mysql
+      - ${MYSQL_LOCAL_HOME}/:/var/lib/mysql
     command:
       - '--default-authentication-plugin=mysql_native_password'
 
