--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     depends_on:
       - database
     volumes:
-      - ${WORDPRESS_LOCAL_HOME}:/var/www/html
-      - ${WORDPRESS_UPLOADS_CONFIG}:/usr/local/etc/php/conf.d/uploads.ini
+      - ${WORDPRESS_LOCAL_HOME}/:/var/www/html
+      - ${WORDPRESS_UPLOADS_CONFIG}/:/usr/local/etc/php/conf.d/uploads.ini
       # - /path/to/repo/myTheme/:/var/www/html/wp-content/themes/myTheme
     environment:
       - WORDPRESS_DB_HOST=${WORDPRESS_DB_HOST}
@@ -56,10 +56,10 @@ services:
       - "8080:80"    # http
       - "8443:443"   # https
     volumes:
-      - ${WORDPRESS_LOCAL_HOME}:/var/www/html
-      - ${NGINX_CONF}:/etc/nginx/conf.d/default.conf
-      - ${NGINX_SSL_CERTS}:/etc/ssl:ro
-      - ${NGINX_LOGS}:/var/log/nginx
+      - ${WORDPRESS_LOCAL_HOME}/:/var/www/html
+      - ${NGINX_CONF}/:/etc/nginx/conf.d/default.conf
+      - ${NGINX_SSL_CERTS}/:/etc/ssl:ro
+      - ${NGINX_LOGS}/:/var/log/nginx
 
   # adminer - bring up only as needed - bypasses nginx
 #  adminer:
