--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       - "8080:80"    # http
       - "8443:443"   # https
     volumes:
-      - ${WORDPRESS_LOCAL_HOME}/:/var/www/html
+      - ${WORDPRESS_LOCAL_HOME}:/var/www/html
       - ${NGINX_CONF}:/etc/nginx/conf.d/default.conf
       - ${NGINX_SSL_CERTS}/:/etc/ssl:ro
       - ${NGINX_LOGS}/:/var/log/nginx
